compiler/tests/en/errors/repeat_id.salam
// EXPECT: E019
layout:
    box: repeat = 3 id = "card" content = "x" end
end
